elastic_ip_creation.tf
resource "aws_eip" "xfusion-eip" {
  domain   = "vpc"
  tags = {
        Name        = "xfusion-eip"
      }
}
